--- a/build.gradle
+++ b/build.gradle
@@ -66,10 +66,10 @@ task installReact(type: Exec) {
     inputs.dir "$webappDir"
     group = BasePlugin.BUILD_GROUP
     if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
-        commandLine "npm.cmd", "audit", "fix"
+//        commandLine "npm.cmd", "audit", "fix"
         commandLine 'npm.cmd', 'install'
     } else {
-        commandLine "npm", "audit", "fix"
+//        commandLine "npm", "audit", "fix"
         commandLine 'npm', 'install'
     }
 }
