--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 # SQL ??? ???? formatting ??
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
