--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,6 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 # SQL ??? ???? formatting ??
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
