챌린지 디테일 페이지 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# Database Settings
 # MySQL Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
@@ -10,13 +11,21 @@ spring.datasource.username=admin
 # DB password
 spring.datasource.password=cobell123
 
-# ??? SQL ?? ??
+# JPA Settings
+# 실행한 SQL을 보여줌
 spring.jpa.show-sql=true
 
 # DDL ?? ?? ??(create/update/create-drop/validate/none)
 spring.jpa.hibernate.ddl-auto=update
 
-# SQL ??? ???? formatting ??
-#spring.jpa.properties.hibernate.format_sql=true
+# SQL을 보기 좋게 formatting 해줌
+# spring.jpa.properties.hibernate.format_sql=true
 
+# query의 식별자(테이블명, 필드명 등)을 `로 감싸줌
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+# Spring Boot Application 실행시 콘솔에 뜨는 로그
+# logging.level.org.hibernate=debug
+
+# Entity 필드명과 DB 컬럼명 사이의 이름 변환 규칙
+# spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
