--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,5 +32,5 @@ spring:
 custom:
   path:
     uploadImage: '/Users/hyunji/Documents/Cobell/resources/'
-
+#    uploadImage: '/home/ec2-user/resources/'
 
