--- a/src/main/reactjs/package.json
+++ b/src/main/reactjs/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
+    "@nivo/core": "^0.80.0",
+    "@nivo/line": "^0.80.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +18,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-vis": "^1.11.7",
+    "recharts": "^2.1.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
