프로필의 내가 만든 챌린지와 참여한 챌린지의 보기 방식을 탭으로 변경

--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ task copyWebApp(type: Copy) {
 }
 
 task buildReact(type: Exec) {
-    dependsOn "installReact"
+//    dependsOn "installReact"
     workingDir "$webappDir"
     inputs.dir "$webappDir"
     group = BasePlugin.BUILD_GROUP
@@ -64,18 +64,18 @@ task buildReact(type: Exec) {
     }
 }
 
-task installReact(type: Exec) {
-    workingDir "$webappDir"
-    inputs.dir "$webappDir"
-    group = BasePlugin.BUILD_GROUP
-    if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
-//        commandLine "npm.cmd", "audit", "fix"
-        commandLine 'npm.cmd', 'install'
-    } else {
-//        commandLine "npm", "audit", "fix"
-        commandLine 'npm', 'install'
-    }
-}
+//task installReact(type: Exec) {
+//    workingDir "$webappDir"
+//    inputs.dir "$webappDir"
+//    group = BasePlugin.BUILD_GROUP
+//    if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
+////        commandLine "npm.cmd", "audit", "fix"
+//        commandLine 'npm.cmd', 'install'
+//    } else {
+////        commandLine "npm", "audit", "fix"
+//        commandLine 'npm', 'install'
+//    }
+//}
 //-------------------------------------------------------------//
 
 tasks.named('test') {
