--- a/src/main/reactjs/package.json
+++ b/src/main/reactjs/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/dayjs": "^2.16.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
+    "@mui/x-date-pickers": "^5.0.6",
     "@nivo/core": "^0.80.0",
     "@nivo/line": "^0.80.0",
     "@testing-library/jest-dom": "^5.16.5",
