--- a/src/main/reactjs/package.json
+++ b/src/main/reactjs/package.json
@@ -6,7 +6,6 @@
     "@date-io/dayjs": "^2.16.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
     "@mui/x-date-pickers": "^5.0.6",
@@ -15,6 +14,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@yaireo/tagify": "^4.16.4",
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
     "half-pie-chart": "^1.0.6",
