application.yml 수정

--- a/.gitignore
+++ b/.gitignore
@@ -46,4 +46,4 @@ resources/
 resources/**
 resources/challenge_photo/**
 resources/user_photo/**
-src/main/resources/application.yml
+# src/main/resources/application.yml
