--- a/.gitignore
+++ b/.gitignore
@@ -39,11 +39,5 @@ out/
 
 .DS_Store
 
-/resources
-/resources/
-/resources/**
 resources/
-resources/**
-resources/challenge_photo/**
-resources/user_photo/**
-# src/main/resources/application.yml
+src/main/resources/application.yml
